--- a/recipes/peanut-butter-pound-cake.html
+++ b/recipes/peanut-butter-pound-cake.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Peanut butter pound cake</h1>
+    <h1>Peanut Butter Pound Cake</h1>
     <img src="peanut-butter-pound-cake.jpg" alt="peanut butter pound cake">
     <h2>Description</h2>
     <p>Nutty pound cake with a crunchy topping.</p>
@@ -31,5 +31,6 @@
         <li>Bake in the preheated oven until golden, about 45 minutes. Sprinkle peanuts on top. Reduce oven temperature to 325 degrees F (165 degrees C). Continue baking until a toothpick inserted into the center comes out clean, 15 to 20 minutes more.</li>
         <li>Cool cake in the pan for 10 minutes. Invert onto a wire rack and let cool completely.</li>
     </ol>
+    <p>https://www.allrecipes.com/recipe/257280/peanut-butter-pound-cake/</p>
 </body>
 </html>
