--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -28,5 +28,6 @@
         <li>Lightly butter a griddle and heat over medium-high heat.</li>
         <li>Dunk bread in the egg mixture, soaking both sides. Transfer to the hot skillet and cook until golden, 3 to 4 minutes per side. Serve hot.</li>
     </ol>
+    <p>Source:https://www.allrecipes.com/recipe/7016/french-toast-i/</p>
 </body>
 </html>
